--- a/.github/workflows/hexlet-check.yml
+++ b/.github/workflows/hexlet-check.yml
@@ -17,13 +17,10 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.14"
+          python-version: "3.12"
 
-      - name: Install uv (with caching)
+      - name: Install uv
         uses: astral-sh/setup-uv@v3
-
-      - name: Run tests
-        run: npm test
 
       - name: Verify tools
         run: |
